# PyVenice

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GRIMOIRE.md  PROCEDURES.md  README.md  main.py  pyproject.toml  pytest.ini  test_monitor.py
.github/workflows/: api-monitor.yml  build-wheels.yml  docker.yml  publish.yml  security.yml  tests.yml
.monica-code/: config.json
conda-recipe/pyvenice/: meta.yaml
docs/: CI_CD_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTALLATION_TROUBLESHOOTING.md  SECURITY_AUDIT_PLAN.md  SESSION_HANDOVER.md  api_changes.json  api_update_report.md  architecture-diagram-template.drawio  architecture-diagram.mmd  architecture-diagram.puml  architecture.md  changelog_changes.json  changelog_history.json  changelog_monitoring_report.json  deprecated_params.json  model_audit_report.json  model_update_report.json  response_schemas.json  schema_monitoring_report.json  swagger_current.yaml  venice_changelog_debug.html
menace/: api_keys.py  billing.py  characters.py  chat.py  client.py  image.py  models.py
pyvenice/: __init__.py  api_keys.py  audio.py  billing.py  characters.py  chat.py  client.py  deprecation.py  embeddings.py  exceptions.py  image.py  models.py  validators.py
scripts/: api-contract-validator.py  api-monitor.py  changelog-monitor.py  ci-feedback.py  daily-monitor.sh  dead-code-detector.py  docs-scraper.py  generate-endpoint.py  model-audit.py  model-updater.py  publish.sh  response-schema-monitor.py  safe-auto-deploy.py  safety-validator.py  schema-diff.py  security-scan.sh
src/: example_usage.py  simple_example.py
tests/: __init__.py  conftest.py  test_audio.py  test_billing.py  test_chat.py  test_client.py  test_embeddings.py  test_image.py  test_models.py  test_validators.py
