[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvenice"
version = "0.2.0"
description = "A comprehensive Python client for the Venice.ai API with automatic parameter validation"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Kieran Bicheno", email = "kieran@bicheno.me"},
]
maintainers = [
    {name = "Kieran Bicheno", email = "kieran@bicheno.me"},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["venice", "ai", "api", "client", "llm", "chatgpt", "gpt", "claude", "anthropic"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/TheLustriVA/PyVenice"
"Bug Tracker" = "https://github.com/TheLustriVA/PyVenice/issues"
"Documentation" = "https://github.com/TheLustriVA/PyVenice#readme"
"Source Code" = "https://github.com/TheLustriVA/PyVenice"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "freezegun>=1.2.0",
]
dev = [
    "pyvenice[test]",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[tool.setuptools]
packages = ["pyvenice"]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests -x -v"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "yum install -y openssl-devel libffi-devel || apt-get update && apt-get install -y libssl-dev libffi-dev"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
